# librecaptcha

./: MANIFEST.in  README.md  README.rst  librecaptcha.py  requirements.freeze.txt  requirements.txt  setup.cfg  setup.py
librecaptcha/: __init__.py  __main__.py  cli.py  errors.py  extract_strings.py  frontend.py  gui.py  librecaptcha.py  recaptcha.py  typing.py  user_agent_data.py  user_agents.py
misc/: screenshot-attribution.md
scripts/: update_user_agents.py
test-server/: server.py
